--- a/css/decouvrir.css
+++ b/css/decouvrir.css
@@ -83,7 +83,7 @@ a:first-child i:hover {
     width: 25%;
     padding-top: 1em;
     text-align: center;
-    color: #3A3B3C;
+    color: white;
     margin: 2em;
 }
 
