--- a/css/decouvrir.css
+++ b/css/decouvrir.css
@@ -27,6 +27,7 @@ nav a {
     padding: 10px 20px;
     border-radius: 5px;
     font-weight: 500;
+    font-weight: bold;
     display: inline-block;
     text-decoration: none;
     color: #da951e;
